--- a/Apply-now.html
+++ b/Apply-now.html
@@ -12,7 +12,7 @@
 <body>
 
 <!-- HEADER (same as other pages) -->
-<header class="header">
+<header class="header-two">
     <div class="header-container container">
         <div class="logo-wrap">
             <img src="assets/Logo.png" alt="Altellect" />
