--- a/Fund.html
+++ b/Fund.html
@@ -12,22 +12,26 @@
 <body>
 
 <!-- HEADER (same as other pages) -->
-<header class="header">
-    <div class="header-container container">
-        <div class="logo-wrap">
-            <img src="assets/Logo.png" alt="Altellect" />
-        </div>
-        <nav class="nav">
-              <a href="index.html">Home</a>
-              <a href="about-us.html">About Us</a>
-              <a href="Projects.html">Projects</a>
-              <a href="capital.html">Altellect Capital</a>
-              <a href="carrers.html">Careers</a>
-         
-              <a href="contact.html">Contact Us</a>
-        </nav>
-           <a class="join-btn" href="join.html">Join The Ecosystem</a>
+<header class=" header-two">
+  <div class="header-container container">
+    <div class="logo-wrap">
+      <img src="assets/Logo.png" alt="Altellect" />
+ 
     </div>
+
+    <nav class="nav">
+      <a class="active" href="index.html">Home</a>
+      <a href="about-us.html">About Us</a>
+      <a href="Projects.html">Projects</a>
+      <a href="capital.html">Altellect Capital</a>
+      <a href="carrers.html">Careers</a>
+     
+      <a href="contact.html">Contact Us</a>
+    </nav>
+
+     <a class="join-btn" href="join.html">Join The Ecosystem</a>
+        <title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> Altellect</title>
+        <link rel="icon" type="image/png" href="assets/Logo.png" />
 </header>
 
 <main class="funding-main">
