--- a/Privacy.html
+++ b/Privacy.html
@@ -12,21 +12,26 @@
 <body>
 
 <!-- HEADER (same as other pages) -->
-<header class="header">
-    <div class="header-container container">
-        <div class="logo-wrap">
-            <img src="assets/Logo.png" alt="Altellect" />
-        </div>
-        <nav class="nav">
-              <a href="index.html">Home</a>
-              <a href="about-us.html">About Us</a>
-              <a href="Projects.html">Projects</a>
-              <a href="capital.html">Altellect Capital</a>
-              <a href="carrers.html">Careers</a>
-              <a href="contact.html">Contact Us</a>
-        </nav>
-           <a class="join-btn" href="join.html">Join The Ecosystem</a>
+<header class=" header">
+  <div class="header-container container">
+    <div class="logo-wrap">
+      <img src="assets/Logo.png" alt="Altellect" />
+ 
     </div>
+
+    <nav class="nav">
+      <a class="active" href="index.html">Home</a>
+      <a href="about-us.html">About Us</a>
+      <a href="Projects.html">Projects</a>
+      <a href="capital.html">Altellect Capital</a>
+      <a href="carrers.html">Careers</a>
+     
+      <a href="contact.html">Contact Us</a>
+    </nav>
+
+     <a class="join-btn" href="join.html">Join The Ecosystem</a>
+        <title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> Altellect</title>
+        <link rel="icon" type="image/png" href="assets/Logo.png" />
 </header>
 
 <main class="privacy-main">
@@ -54,10 +59,15 @@
             </ol>
         </div>
     </section>
-    <section class="contact-cta">
-        <h3>Your Vision Deserves A Dedicated Partner.</h3>
-        <a href="#" class="join-btn">LET'S CONNECT!</a>
-    </section>
+</main>
+
+<!-- HERO BANNER SECTION (as shown in screenshot, after privacy-main) -->
+<section class="privacy-hero-banner" style="background:#3C3B3B; width:100vw; min-height:60px; padding:0; margin:0; display:flex; align-items:center; justify-content:center;">
+    <div style="width:100%; max-width:900px; margin:0 auto; padding:32px 0; text-align:center;">
+        <h3 style="font-family:'Roboto',sans-serif; font-size:1.4rem; font-weight:700; color:#fff; margin-bottom:18px;">Your Vision Deserves A Dedicated Partner.</h3>
+        <a href="#" class="join-btn" style="background:#6A6A6A; color:#fff; font-family:'Roboto', 'Montserrat', Arial, sans-serif; font-size:16px; font-weight:700; padding:10px 0; width:160px; border:none; border-radius:0; box-shadow:none; letter-spacing:1px; text-align:center; display:inline-block; text-decoration:none;">LET'S CONNECT!</a>
+    </div>
+</section>
 </main>
 
 <!-- FOOTER (same as other pages) -->
