--- a/join.html
+++ b/join.html
@@ -12,7 +12,7 @@
 <body>
 
 <!-- HEADER (same as other pages) -->
-<header class="header">
+<header class="header ">
     <div class="header-container container">
         <div class="logo-wrap">
             <img src="assets/Logo.png" alt="Altellect" />
@@ -93,7 +93,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
                 <!-- Two-column section (XD Spec) -->
                 <section class="join-content-row" style="max-width:1000px; margin:40px auto 0 auto; display:flex; flex-wrap:wrap; background:#fff; box-shadow:0 2px 16px rgba(0,0,0,0.03); border-radius:0;">
-                    <div class="join-content-img" style="flex:1 1 420px; min-width:320px; display:flex; align-items:center; justify-content:center;">
+                    <div class="join-content-img" style="flex:1 1 420px; min-width:320px;  align-items:center; justify-content:center;">
                                             <img src="assets/Ecosystem-img.png" alt="Join Altellect" style="border-radius:0; box-shadow:0 2px 16px rgba(0,0,0,0.07);">
                     </div>
                     <div class="join-content-box" style="flex:1 1 420px; min-width:320px; padding:40px 32px 32px 40px; display:flex; flex-direction:column; justify-content:center;">
@@ -125,7 +125,7 @@ document.addEventListener('DOMContentLoaded', function() {
                                 <td style="padding:8px 12px; border:1px solid #bbb;">Contribute as a domain specialist or build partner</td>
                             </tr>
                         </table>
-                        <a href="Apply-now.html" class="join-btn-main" style="background:#666; color:#fff; font-family:'Roboto', 'Montserrat', Arial, sans-serif; font-size:16px; font-weight:700; padding:10px 0; width:160px; border:none; border-radius:0; box-shadow:none; letter-spacing:1px; text-align:center; margin-top:8px; display:block;">
+                        <a href="Apply-now.html" class="join-btn-main" style="background:#666; color:#fff; font-family:'Roboto', 'Montserrat', Arial, sans-serif; font-size:16px; font-weight:700; padding:10px 0; width:160px; border:none; border-radius:0; box-shadow:none; letter-spacing:1px; text-align:center; margin-top:8px; display:block; text-decoration:none;">
                             APPLY NOW
                         </a>
                     </div>
