--- a/Fund.html
+++ b/Fund.html
@@ -30,7 +30,7 @@
     </nav>
 
      <a class="join-btn" href="join.html">Join The Ecosystem</a>
-        <title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> Altellect</title>
+        <title>Altellect</title>
         <link rel="icon" type="image/png" href="assets/Logo.png" />
 </header>
 
@@ -115,7 +115,7 @@
     </div>
     <div class="footer-bottom container">
         <span>Copyright © 2026 Altellect | All rights reserved.</span>
-        <a href="#">Privacy Policy</a>
+        <a href="Privacy.html">Privacy Policy</a>
     </div>
 </footer>
 
