--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> About Us – Altellect</title>
+  <title>About Us – Altellect</title>
   <link rel="icon" type="image/png" href="assets/Logo.png" />
 
   <!-- Fonts -->
@@ -610,7 +610,7 @@ showSlides(0);
   </div>
   <div class="footer-bottom container">
     <span>Copyright © 2026 Altellect | All rights reserved.</span>
-    <a href="#">Privacy Policy</a>
+    <a href="Privacy.html">Privacy Policy</a>
   </div>
 </footer>
 
