--- a/capital.html
+++ b/capital.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> Altellect Capital</title>
+	<title>Altellect Capital</title>
 	<link rel="icon" type="image/png" href="assets/Logo.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
@@ -169,7 +169,7 @@
 		</div>
 		<div class="footer-bottom container">
 			<span>Copyright © 2026 Altellect | All rights reserved.</span>
-			<a href="#">Privacy Policy</a>
+			<a href="Privacy.html">Privacy Policy</a>
 		</div>
 	</footer>
 
