--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
 	</div>
 	<div class="footer-bottom container">
 		<span>Copyright © 2026 Altellect | All rights reserved.</span>
-		<a href="#">Privacy Policy</a>
+		<a href="Privacy.html">Privacy Policy</a>
 	</div>
 </footer>
 
