--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
 
      <a class="join-btn" href="join.html">Join The Ecosystem</a>
-        <title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> Altellect</title>
+        <title>Altellect</title>
         <link rel="icon" type="image/png" href="assets/Logo.png" />
 </header>
 
@@ -269,7 +269,7 @@
 
   <div class="footer-bottom container">
     <span>Copyright © 2026 Altellect | All rights reserved.</span>
-    <a href="#">Privacy Policy</a>
+    <a href="Privacy.html">Privacy Policy</a>
   </div>
 </footer>
 
