--- a/join.html
+++ b/join.html
@@ -174,7 +174,7 @@ document.addEventListener('DOMContentLoaded', function() {
     </div>
     <div class="footer-bottom container">
         <span>Copyright © 2026 Altellect | All rights reserved.</span>
-        <a href="#">Privacy Policy</a>
+        <a href="Privacy.html">Privacy Policy</a>
     </div>
 </footer>
 
