--- a/about-us.html
+++ b/about-us.html
@@ -258,6 +258,21 @@
           </div>
         </div>
 
+             <!-- Slide 4 -->
+        <div class="slide">
+          <div class="leader-card">
+            <div class="leader-img">
+              <img src="assets/Ranjeet.png" alt="Ranjeet" />
+            </div>
+            <div class="leader-info">
+              <h3>Ranjeet Suraj Singh</h3>
+              <span class="leader-title">Group CEO Venture Systems</span>
+              <div class="leader-dash"></div>
+              <p class="leader-exp">25+ Yrs</p>
+              <p class="leader-journey"><strong>Professional Journey :</strong> Vodafone, DishTV, Tata Tele</p>
+            </div>
+          </div>
+        </div>
         <!-- Slide 3 -->
         <div class="slide">
           <div class="leader-card">
@@ -273,19 +288,18 @@
             </div>
           </div>
         </div>
-
-        <!-- Slide 4 -->
+      <!-- Slide 3 -->
         <div class="slide">
           <div class="leader-card">
             <div class="leader-img">
-              <img src="assets/Ranjeet.png" alt="Ranjeet" />
+              <img src="assets/Girish-Nair.png" alt="Girish Nair" />
             </div>
             <div class="leader-info">
-              <h3>Ranjeet Suraj Singh</h3>
-              <span class="leader-title">Group CEO Venture Systems</span>
+              <h3>Avijit Dutta</h3>
+              <span class="leader-title">Chief Venture Architect</span>
               <div class="leader-dash"></div>
-              <p class="leader-exp">25+ Yrs</p>
-              <p class="leader-journey"><strong>Professional Journey :</strong> Vodafone, DishTV, Tata Tele</p>
+              <p class="leader-exp">17+ Yrs Of Product & Innovation Leadership Exp.</p>
+              <p class="leader-journey"><strong>Professional Journey:</strong> Nonlinear , ZiffyHomes , Fella Homes, ShareYourShelves , Jason , GENPACT , Punj Lloyd Ltd.</p>
             </div>
           </div>
         </div>
@@ -298,10 +312,10 @@
             </div>
             <div class="leader-info">
               <h3>Raajesh Chalke</h3>
-              <span class="leader-title">Financial Advisor</span>
+              <span class="leader-title">Strategic Financial Advisor</span>
               <div class="leader-dash"></div>
-              <p class="leader-exp">30+ Yrs</p>
-              <p class="leader-journey"><strong>Professional Journey :</strong> Eros Media, Carnival Group</p>
+              <p class="leader-exp">30+ Yrs Of Gobal Finance Leadership Exp.</p>
+              <p class="leader-journey"><strong>Professional Journey :</strong>Professional Journey :</p>
             </div>
           </div>
         </div>
@@ -349,7 +363,7 @@
               <span class="leader-title" style="color:#FDB913;">Chief Human Resource Officer</span>
               <div class="leader-dash"></div>
               <p class="leader-exp">20+ Yrs Of Strategic Human Capital Leadership.</p>
-              <p class="leader-journey"><strong>Professional Journey :</strong> The Loop, Mudrex, Hubilo.</p>
+              <p class="leader-journey"><strong>Professional Journey :</strong> The Loop , Mudrex , Hubilo.</p>
             </div>
           </div>
         </div>
@@ -364,7 +378,7 @@
               <span class="leader-title">Chief Design Officer</span>
               <div class="leader-dash"></div>
               <p class="leader-exp">30+ Yrs Of Brand Strategy, Visual Identity Exp.</p>
-              <p class="leader-journey"><strong>Professional Journey :</strong> D B & A, OrangeStone Designs, Leo Burnett, FITCH, Lowe Adventa, Mccann Erickson Worldgroup, DDB Mudra Group, Ogilvy.</p>
+              <p class="leader-journey"><strong>Professional Journey :</strong> D B & A , OrangeStone Designs , Leo Burnett, FITCH , Lowe Adventa , Mccann Erickson Worldgroup , DDB Mudra Group , Ogilvy.</p>
             </div>
           </div>
         </div>
