--- a/capital.html
+++ b/capital.html
@@ -127,12 +127,12 @@
 					</div>
 				</section>
 
-		<!-- Call to Action -->
-		<section style="text-align:center; padding:40px 0 60px 0;">
-			<h3 style="font-size:1.3rem; font-family:Montserrat,Arial,sans-serif; font-weight:700; margin-bottom:12px;">
-				Your Vision Deserves A Dedicated Partner.</h3>
-			<a href="#" class="join-btn">LET'S CONNECT!</a>
-		</section>
+<section class="cta-wrap">
+  <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
+    <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
+    <button class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px;">LET’S CONNECT!</button>
+  </div>
+</section>
 	</main>
 
 	<!-- FOOTER (copied from index.html) -->
