--- a/contact.html
+++ b/contact.html
@@ -96,15 +96,18 @@
   </section>
 
  <section class="social-row" style="background:#f2f2f2; padding:32px 0; text-align:center;">
-		<span style="font-size:1.1rem; font-weight:600; color:#222; display:block; margin-bottom:18px;">Connect with us</span>
-		<div class="line" style="width:60px; height:2px; background:#FDB913; margin:0 auto 18px auto;"></div>
-		<div class="icons" style="display:flex; justify-content:center; gap:24px;">
-			<img src="assets/Facebook-unit.png" alt="Facebook" style="height:32px;">
-			<img src="assets/Insta-unit@2x.png" alt="Instagram" style="height:32px;">
-			<img src="assets/LinkedIn-unit.png" alt="LinkedIn" style="height:32px;">
-			<img src="assets/WhatsApp-unit.png" alt="WhatsApp" style="height:32px;">
-		</div>
-	</section>
+	 <div style="display:flex; align-items:center; justify-content:center; gap:32px;">
+		 <span style="font-size:1.1rem; font-weight:600; color:#222;">Connect with us</span>
+		 <div style="width:120px; height:6px; background:#FDB913; border-radius:4px;"></div>
+		 <div class="icons" style="display:flex; gap:24px; align-items:center;">
+			 <img src="assets/Facebook-unit.png" alt="Facebook" style="height:32px;">
+			 <img src="assets/Insta-unit@2x.png" alt="Instagram" style="height:32px;">
+			 <img src="assets/LinkedIn-unit.png" alt="LinkedIn" style="height:32px;">
+			 <img src="assets/WhatsApp-unit.png" alt="WhatsApp" style="height:32px;">
+		 </div>
+		
+	 </div>
+ </section>
 
  
 
@@ -112,6 +115,23 @@
 
 </main>
 
+<!-- ===== FULL BACKGROUND MAP SECTION ===== -->
+</section>
+<section class="full-map-section" style="z-index:0; height:340px; min-height:340px; position:relative;">
+	<iframe 
+		src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.781997040988!2d72.83054807472726!3d19.07285915211719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c906ad720adb%3A0x52a9da6afdd1c674!2sSea%20Breeze%20Building!5e0!3m2!1sen!2sin!4v1705079999999"
+		allowfullscreen=""
+		loading="lazy"
+		style="position:absolute;top:0;left:0;width:100%;height:100%;border:none;z-index:0;"></iframe>
+	<!-- Only map as background, no overlay or form -->
+</section>
+</section>
+<section class="cta-wrap">
+  <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
+    <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
+    <button class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px;">LET’S CONNECT!</button>
+  </div>
+</section>
 
 <!-- FOOTER (copied from index.html) -->
 <footer class="footer">
