--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,8 @@
 		 <div class="icons" style="display:flex; gap:24px; align-items:center;">
 			 <img src="assets/Facebook-unit.png" alt="Facebook" style="height:32px;">
 			 <img src="assets/Insta-unit@2x.png" alt="Instagram" style="height:32px;">
-			 <img src="assets/LinkedIn-unit.png" alt="LinkedIn" style="height:32px;">
-			 <img src="assets/WhatsApp-unit.png" alt="WhatsApp" style="height:32px;">
+			<img src="assets/Linkedin-unit.png" alt="LinkedIn" style="height:32px;">
+<img src="assets/Whatsapp-unit.png" alt="WhatsApp" style="height:32px;">
 		 </div>
 		
 	 </div>
