--- a/Fund.html
+++ b/Fund.html
@@ -77,7 +77,7 @@
     </section>
     <section class="contact-cta">
         <h3>Your vision deserves a dedicated partner.</h3>
-        <a href="#" class="join-btn">LET'S CONNECT!</a>
+        <a href="contact.html" class="join-btn">LET'S CONNECT!</a>
     </section>
 </main>
 
