--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Contact Us – Altellect</title>
-	<link rel="icon" type="image/png" href="assets/Logo.png" />
+	<link rel="icon" type="image/png" href="assets/altellect-logo.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
@@ -12,7 +12,7 @@
 <body>
 
 <!-- HEADER (copied from index.html) -->
-<header class="header">
+<header class="header-two">
 	<div class="header-container container">
 		<div class="logo-wrap">
 			<img src="assets/Logo.png" alt="Altellect" />
@@ -33,7 +33,7 @@
 
 <!-- HERO/BANNER SECTION -->
 <section class="about-hero contact-hero" style="position:relative; background:url('assets/Contact-us-banner.png') center/cover no-repeat; min-height:340px; height:340px; display:flex; align-items:flex-end;">
-	<div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
+	<div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;"></div>
 	<div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
 		<h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">One Platform. Many Conversations.</h1>
 	</div>
@@ -80,7 +80,7 @@
     </div>
 
     <!-- RIGHT FORM -->
-	<div class="contact-right" style="background:#fff; padding:32px 24px; border-radius:8px; box-shadow:0 2px 16px rgba(0,0,0,0.06);">
+	<div class="contact-right" style="background:#fff; padding:32px 24px;  box-shadow:0 2px 16px rgba(0,0,0,0.06);">
       <h2 class="form-title">Send us a message</h2>
 
       <form>
@@ -98,7 +98,7 @@
  <section class="social-row" style="background:#f2f2f2; padding:32px 0; text-align:center;">
 	 <div style="display:flex; align-items:center; justify-content:center; gap:32px;">
 		 <span style="font-size:1.1rem; font-weight:600; color:#222;">Connect with us</span>
-		 <div style="width:120px; height:6px; background:#FDB913; border-radius:4px;"></div>
+		 <div style="width:150px; height:3px; background:#6A6A6A; border-radius:2px;"></div>
 		 <div class="icons" style="display:flex; gap:24px; align-items:center;">
 			 <img src="assets/Facebook-unit.png" alt="Facebook" style="height:32px;">
 			 <img src="assets/Insta-unit@2x.png" alt="Instagram" style="height:32px;">
@@ -133,9 +133,10 @@
   </div>
 </section>
 
-<!-- FOOTER (copied from index.html) -->
+<!-- FOOTER -->
 <footer class="footer">
 	<div class="container footer-grid">
+		<!-- LOGO + ADDRESS -->
 		<div class="footer-brand">
 			<img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
 			<p>
@@ -144,24 +145,29 @@
 				Maharashtra 400025
 			</p>
 		</div>
+		<!-- MENU -->
 		<div>
 			<h5>Menu</h5>
-			<a href="#">Projects</a>
-			<a href="#">Altellect Capital</a>
-			<a href="#">Careers</a>
+			<a href="Projects.html">Projects</a>
+			<a href="capital.html">Altellect Capital</a>
+			<a href="carrers.html">Careers</a>
 		</div>
+		<!-- SUPPORT -->
 		<div>
 			<h5>Support</h5>
-			<a href="#">Contact Us</a>
+			<a href="contact.html">Contact Us</a>
 		</div>
+		<!-- COMPANY -->
 		<div>
 			<h5>Company</h5>
-			<a href="#">Home</a>
-			<a href="#">About Us</a>
-
+			<a href="index.html">Home</a>
+			<a href="about-us.html">About Us</a>
+			<a href="join.html">Join The Ecosystem</a>
 			<div class="socials">
-				<a href="#">f</a>
-				<a href="#">in</a>
+				   <a href="https://facebook.com/altellect" target="_blank" title="Facebook"><img src="assets/Facebook-icon.png" alt="Facebook" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+				   <a href="https://instagram.com/altellect" target="_blank" title="Instagram"><img src="assets/Instagram-icon.png" alt="Instagram" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+				   <a href="https://linkedin.com/company/altellect" target="_blank" title="LinkedIn"><img src="assets/Linkedin-icon.png" alt="LinkedIn" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+				   <a href="https://wa.me/" target="_blank" title="WhatsApp"><img src="assets/Whatsapp-icon.png" alt="WhatsApp" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
 			</div>
 		</div>
 	</div>
