--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us – Altellect</title>
-  <link rel="icon" type="image/png" href="assets/Logo.png" />
+  <link rel="icon" type="image/png" href="assets/altellect-logo.png" />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
 <section class="about-hero">
   <div class="about-hero-overlay"></div>
   <div class="about-hero-content">
-      <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">About Altellect</h1>
+      <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">One Ecosystem. Infinite Potential.</h1>
   </div>
 </section>
 <style>
@@ -57,7 +57,7 @@
     max-width: 320px;
     flex: 1 1 0;
     text-align: center;
-    font-family: 'Montserrat', 'Roboto', Arial, sans-serif;
+    font-family: 'Roboto';
     font-size: 1.1rem;
     font-weight: 600;
     color: #222;
@@ -142,28 +142,26 @@
       </div>
   </div>
 </section>
-      </p>
     </div>
 
-    <section class="belief-section" style="background: #F2F2F2 0% 0% no-repeat padding-box;">
-      <div class="belief-row">
-        <div class="belief-col">
-          <h4>From Market-Product Fit to Scale</h4>
-          <div class="belief-yellow-line"></div>
-          <p>
-         Once fit is established, we support ventures with shared infrastructure — spanning strategy, brand, operations, talent, and growth — enabling founders to focus fully on building and scaling the core business.
-          </p>
-        </div>
-        <div class="belief-col">
-     
-          <h4>Our Belief</h4>
-          <div class="belief-yellow-line"></div>
-          <p>
-            Strong ventures are not accidents. They are engineered through structured ecosystems and discipline that compounds over time. Altellect exists to build such ventures.
-          </p>
-        </div>
-      </div>
-    </section>
+<section class="belief-section" style="background: #F2F2F2 0% 0% no-repeat padding-box;">
+  <div class="belief-row">
+    <div class="belief-col">
+      <h4>From Market-Product Fit to Scale</h4>
+      <div class="belief-yellow-line"></div>
+      <p>
+        Once fit is established, we support ventures with shared infrastructure — spanning strategy, brand, operations, talent, and growth — enabling founders to focus fully on building and scaling the core business.
+      </p>
+    </div>
+    <div class="belief-col">
+      <h4>Our Belief</h4>
+      <div class="belief-yellow-line"></div>
+      <p>
+        Strong ventures are not accidents. They are engineered through structured ecosystems and discipline that compounds over time. Altellect exists to build such ventures.
+      </p>
+    </div>
+  </div>
+</section>
     <style>
 
     .belief-section {
@@ -708,7 +706,7 @@ function showSlides(idx) {
 setInterval(() => {
   let next = (currentSlideIdx + 1) % totalDots;
   showSlides(next);
-}, 8000); // Slower auto-slide: 8 seconds
+}, 15000); // Much slower auto-slide: 15 seconds
 
 showSlides(0);
 </script>
@@ -717,7 +715,7 @@ showSlides(0);
 <section class="cta-wrap">
   <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
     <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
-    <button class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px;">LET’S CONNECT!</button>
+    <a href="contact.html" class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px; display: inline-block; text-align: center; text-decoration: none;">LET’S CONNECT!</a>
   </div>
 </section>
 
@@ -737,24 +735,26 @@ showSlides(0);
     <!-- MENU -->
     <div>
       <h5>Menu</h5>
-      <a href="#">Projects</a>
-      <a href="#">Altellect Capital</a>
-      <a href="#">Careers</a>
+      <a href="Projects.html">Projects</a>
+      <a href="capital.html">Altellect Capital</a>
+      <a href="carrers.html">Careers</a>
     </div>
     <!-- SUPPORT -->
     <div>
       <h5>Support</h5>
-      <a href="#">Contact Us</a>
+      <a href="contact.html">Contact Us</a>
     </div>
     <!-- COMPANY -->
     <div>
       <h5>Company</h5>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-
+      <a href="index.html">Home</a>
+      <a href="about-us.html">About Us</a>
+      <a href="join.html">Join The Ecosystem</a>
       <div class="socials">
-        <a href="#">f</a>
-        <a href="#">in</a>
+        <a href="https://facebook.com/altellect" target="_blank" title="Facebook"><img src="assets/Facebook-icon.png" alt="Facebook" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+        <a href="https://instagram.com/altellect" target="_blank" title="Instagram"><img src="assets/Instagram-icon.png" alt="Instagram" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+        <a href="https://linkedin.com/company/altellect" target="_blank" title="LinkedIn"><img src="assets/Linkedin-icon.png" alt="LinkedIn" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+        <a href="https://wa.me/" target="_blank" title="WhatsApp"><img src="assets/Whatsapp-icon.png" alt="WhatsApp" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
       </div>
     </div>
   </div>
