--- a/capital.html
+++ b/capital.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Altellect Capital</title>
-	<link rel="icon" type="image/png" href="assets/Logo.png" />
+	<link rel="icon" type="image/png" href="assets/altellect-logo.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
@@ -25,7 +25,7 @@
 				<a href="Projects.html">Projects</a>
 				<a class="active" href="capital.html">Altellect Capital</a>
 				<a href="carrers.html">Careers</a>
-		
+
 				<a href="contact.html">Contact Us</a>
 			</nav>
 			<a class="join-btn" href="join.html">Join The Ecosystem</a>
@@ -46,98 +46,117 @@
 	</section>
 
 	<!-- MAIN CONTENT -->
-	<main class="capital-main" style="background:#fff;">
-		<section style="text-align:center; padding:40px 0 0 0;">
-			<h2 style="font-family:Montserrat,Arial,sans-serif; font-size:2rem; font-weight:700; margin-bottom:10px;">
+	<main class="capital-main">
+		<section style="background:#F2F2F2; text-align:center; padding:40px 0 40px 0;">
+			<h2 style="font-family:roboto; font-size:32px; font-weight:700; margin-bottom:10px;">
 				Where Capital Meets Execution Intelligence</h2>
-			<p style="font-size:1.1rem; color:#222; max-width:700px; margin:0 auto 18px auto;">Altellect Capital is our
+			<p style="font-size:12px; color:#000; max-width:700px; margin:0 auto 18px auto;">Altellect Capital is our
 				strategic investment arm that fuels high-impact, high-return ventures designed for long-term perpetuity.
 			</p>
-			<a href="#" class="join-btn" style="margin-top:10px;">Join the Ecosystem</a>
+			<a href="Fund.html" class="apply-funding-btn"
+				style="display:inline-block; margin-top:10px; background:#6A6A6A; color:#fff; width:210px; height:51px; line-height:51px; text-align:center; border:none; border-radius:0; font-size:1.1rem; font-family:'Montserrat',Arial,sans-serif; font-weight:700; letter-spacing:0.5px; opacity:1; text-decoration:none;">Apply
+				for Funding</a>
 		</section>
 
 		<!-- Capital Formats -->
-		<section style="background:#393939; color:#fff; margin:40px 0; padding:36px 0;">
+		<section style="background:#393939; color:#fff; padding:36px 0;">
 			<div class="container" style="max-width:1000px; margin:auto;">
-			
+
 				<h3
 					style="font-size:1.4rem; font-family:Montserrat,Arial,sans-serif; font-weight:700; margin-bottom:8px;text-align:center;">
 					Our Capital Formats</h3>
 				<div style="font-size:1rem; color:#e6e6e6; margin-bottom:24px;text-align:center;">From seed to scale:
 					choose the model that fits your vision</div>
 				<div style="height:2px; background:#FDB913; width:90%; margin:24px auto 32px auto;"></div>
-				<div class="capital-formats-grid" style="display:grid; grid-template-columns:repeat(3,1fr); gap:24px;">
-					<div class="format-card" style="border-radius:8px; padding:24px;">
-						<div style="display:flex; align-items:center; margin-bottom:10px;">
-							<img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; margin-right:10px; display:flex; align-items:center; justify-content:center; background:#FDB913; border-radius:0;" />
-							Direct Equity
-						</div>
-						<p style="color:#e6e6e6; font-size:0.98rem;">Ownership capital with aligned long term partnership</p>
+				   <div class="capital-formats-grid" style="display:grid; grid-template-columns:repeat(3,1fr); gap:24px;">
+					   <div class="format-card" style="border-radius:8px; padding:24px; display:flex; align-items:center; gap:18px;">
+						   <img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; background:#FDB913; border-radius:0; flex-shrink:0;" />
+						   <div style="text-align:left;">
+							   <div style="font-size:16px; font-weight:700; color:#fff; font-family:Roboto; margin-bottom:4px;">Direct Equity</div>
+							   <div style="color:#e6e6e6; font-size:0.98rem;">Ownership capital with aligned long term partnership</div>
+						   </div>
+					   </div>
+					   <div class="format-card" style="border-radius:8px; padding:24px; display:flex; align-items:center; gap:18px;">
+						   <img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; background:#FDB913; border-radius:0; flex-shrink:0;" />
+						   <div style="text-align:left;">
+							   <div style="font-size:16px; font-weight:700; color:#fff; font-family:Roboto; margin-bottom:4px;">Convertible Notes &amp; SAFEs</div>
+							   <div style="color:#e6e6e6; font-size:0.98rem;">Flexible bridge with deferred valuation</div>
+						   </div>
+					   </div>
+					   <div class="format-card" style="border-radius:8px; padding:24px; display:flex; align-items:center; gap:18px;">
+						   <img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; background:#FDB913; border-radius:0; flex-shrink:0;" />
+						   <div style="text-align:left;">
+							   <div style="font-size:16px; font-weight:700; color:#fff; font-family:Roboto; margin-bottom:4px;">Syndicated Growth Rounds</div>
+							   <div style="color:#e6e6e6; font-size:0.98rem;">Lead or join rounds to accelerate scale</div>
+						   </div>
+					   </div>
+					   <div class="format-card" style="border-radius:8px; padding:24px; display:flex; align-items:center; gap:18px;">
+						   <img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; background:#FDB913; border-radius:0; flex-shrink:0;" />
+						   <div style="text-align:left;">
+							   <div style="font-size:16px; font-weight:700; color:#fff; font-family:Roboto; margin-bottom:4px;">Joint Ventures</div>
+							   <div style="color:#e6e6e6; font-size:0.98rem;">Co-create new businesses with shared upside</div>
+						   </div>
+					   </div>
+					   <div class="format-card" style="border-radius:8px; padding:24px; display:flex; align-items:center; gap:18px;">
+						   <img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; background:#FDB913; border-radius:0; flex-shrink:0;" />
+						   <div style="text-align:left;">
+							   <div style="font-size:16px; font-weight:700; color:#fff; font-family:Roboto; margin-bottom:4px;">Internal Spinouts</div>
+							   <div style="color:#e6e6e6; font-size:0.98rem;">Incubate teams into independent ventures</div>
+						   </div>
+					   </div>
+				   </div>
+			</div>
+		</section>
+
+		<!-- We Invest In -->
+		<section style="background:#f7f7f7; padding:40px 0;">
+			<div class="container" style="max-width:1000px; margin:auto;">
+				<h2
+					style="text-align:center; font-family:roboto; font-size:32px; font-weight:700; margin-bottom:32px;">
+					We Invest In…</h2>
+				<div
+					style="display:flex; justify-content:space-around; align-items:flex-start; flex-wrap:wrap; gap:32px;">
+					<div style="flex:1; min-width:220px; text-align:center; max-width:320px;">
+						<img src="assets/Real_est_asset_lifestyle.png"
+							alt="Real Estate, Asset Advisory, Lifestyle, Wellness, and SaaS"
+							style="height:60px; margin-bottom:16px;">
+						<div style="font-size:1rem; font-weight:500; color:#222; margin-bottom:0;">Real Estate, Asset
+							Advisory,<br> Lifestyle, Wellness, and SaaS</div>
 					</div>
-					<div class="format-card" style="border-radius:8px; padding:24px;">
-						<div style="display:flex; align-items:center; margin-bottom:10px;">
-							<img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:0px; background:#FDB913;" />
-							Convertible Notes &amp; SAFEs
-						</div>
-						<p style="color:#e6e6e6; font-size:0.98rem;">Flexible bridge with deferred valuation</p>
+					<div style="flex:1; min-width:220px; text-align:center; max-width:320px;">
+						<img src="assets/System-led_business.png" alt="System-led Businesses With Smart Monetization"
+							style="height:60px; margin-bottom:16px;">
+						<div style="font-size:1rem; font-weight:500; color:#222; margin-bottom:0;">System-led Businesses
+							With<br> Smart Monetization</div>
 					</div>
-					<div class="format-card" style="border-radius:8px; padding:24px;">
-						<div style="display:flex; align-items:center; margin-bottom:10px;">
-							<img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:0px; background:#FDB913;" />
-							Syndicated Growth Rounds
-						</div>
-						<p style="color:#e6e6e6; font-size:0.98rem;">Lead or join rounds to accelerate scale</p>
-					</div>
-					<div class="format-card" style="border-radius:8px; padding:24px;">
-						<div style="display:flex; align-items:center; margin-bottom:10px;">
-							<img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:0px; background:#FDB913;" />
-							Joint Ventures
-						</div>
-						<p style="color:#e6e6e6; font-size:0.98rem;">Co-create new businesses with shared upside</p>
-					</div>
-					<div class="format-card" style="border-radius:8px; padding:24px;">
-						<div style="display:flex; align-items:center; margin-bottom:10px;">
-							<img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:0px; background:#FDB913;" />
-							Internal Spinouts
-						</div>
-						<p style="color:#e6e6e6; font-size:0.98rem;">Incubate teams into independent ventures</p>
+					<div style="flex:1; min-width:220px; text-align:center; max-width:320px;">
+						<img src="assets/Co-building-longterm-alignement.png"
+							alt="Founders Open To Co-building And Long-term Alignment"
+							style="height:60px; margin-bottom:16px;">
+						<div style="font-size:1rem; font-weight:500; color:#222; margin-bottom:0;">Founders Open To
+							Co-building And<br> Long-term Alignment</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
-		<!-- We Invest In -->
-				<section style="background:#f7f7f7; padding:40px 0;">
-					<div class="container" style="max-width:1000px; margin:auto;">
-						<h2 style="text-align:center; font-family:Montserrat,Arial,sans-serif; font-size:2rem; font-weight:700; margin-bottom:32px;">We Invest In…</h2>
-						<div style="display:flex; justify-content:space-around; align-items:flex-start; flex-wrap:wrap; gap:32px;">
-							<div style="flex:1; min-width:220px; text-align:center; max-width:320px;">
-								<img src="assets/Real_est_asset_lifestyle.png" alt="Real Estate, Asset Advisory, Lifestyle, Wellness, and SaaS" style="height:60px; margin-bottom:16px;">
-								<div style="font-size:1rem; font-weight:500; color:#222; margin-bottom:0;">Real Estate, Asset Advisory,<br> Lifestyle, Wellness, and SaaS</div>
-							</div>
-							<div style="flex:1; min-width:220px; text-align:center; max-width:320px;">
-								<img src="assets/System-led_business.png" alt="System-led Businesses With Smart Monetization" style="height:60px; margin-bottom:16px;">
-								<div style="font-size:1rem; font-weight:500; color:#222; margin-bottom:0;">System-led Businesses With<br> Smart Monetization</div>
-							</div>
-							<div style="flex:1; min-width:220px; text-align:center; max-width:320px;">
-								<img src="assets/Co-building-longterm-alignement.png" alt="Founders Open To Co-building And Long-term Alignment" style="height:60px; margin-bottom:16px;">
-								<div style="font-size:1rem; font-weight:500; color:#222; margin-bottom:0;">Founders Open To Co-building And<br> Long-term Alignment</div>
-							</div>
-						</div>
-					</div>
-				</section>
-
-<section class="cta-wrap">
-  <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
-    <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
-    <button class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px;">LET’S CONNECT!</button>
-  </div>
-</section>
+		<section class="cta-wrap">
+			<div class="cta-inner"
+				style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
+				<h2 class="cta-title"
+					style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">
+					Your Vision Deserves A Dedicated Partner.</h2>
+				<a href="contact.html" class="cta-btn"
+					style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px; display: inline-block; text-align: center; text-decoration: none;">LET’S
+					CONNECT!</a>
+			</div>
+		</section>
 	</main>
 
-	<!-- FOOTER (copied from index.html) -->
+	<!-- FOOTER -->
 	<footer class="footer">
 		<div class="container footer-grid">
+			<!-- LOGO + ADDRESS -->
 			<div class="footer-brand">
 				<img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
 				<p>
@@ -146,24 +165,36 @@
 					Maharashtra 400025
 				</p>
 			</div>
+			<!-- MENU -->
 			<div>
 				<h5>Menu</h5>
-				<a href="#">Projects</a>
-				<a href="#">Altellect Capital</a>
-				<a href="#">Careers</a>
+				<a href="Projects.html">Projects</a>
+				<a href="capital.html">Altellect Capital</a>
+				<a href="carrers.html">Careers</a>
 			</div>
+			<!-- SUPPORT -->
 			<div>
 				<h5>Support</h5>
-				<a href="#">Contact Us</a>
+				<a href="contact.html">Contact Us</a>
 			</div>
+			<!-- COMPANY -->
 			<div>
 				<h5>Company</h5>
-				<a href="#">Home</a>
-				<a href="#">About Us</a>
-
+				<a href="index.html">Home</a>
+				<a href="about-us.html">About Us</a>
+				<a href="join.html">Join The Ecosystem</a>
 				<div class="socials">
-					<a href="#">f</a>
-					<a href="#">in</a>
+					<a href="https://facebook.com/altellect" target="_blank" title="Facebook"><img
+							src="assets/Facebook-icon.png" alt="Facebook"
+							style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+					<a href="https://instagram.com/altellect" target="_blank" title="Instagram"><img
+							src="assets/Instagram-icon.png" alt="Instagram"
+							style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+					<a href="https://linkedin.com/company/altellect" target="_blank" title="LinkedIn"><img
+							src="assets/Linkedin-icon.png" alt="LinkedIn"
+							style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+					<a href="https://wa.me/" target="_blank" title="WhatsApp"><img src="assets/Whatsapp-icon.png"
+							alt="WhatsApp" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
 				</div>
 			</div>
 		</div>
