--- a/carrers.html
+++ b/carrers.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Careers – Altellect</title>
-  <link rel="icon" type="image/png" href="assets/Logo.png" />
+  <link rel="icon" type="image/png" href="assets/altellect-logo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
@@ -13,7 +13,7 @@
 <body>
 
 <!-- HEADER (copied from index.html) -->
-<header class="header">
+<header class="header-two">
 	<div class="header-container container">
 		<div class="logo-wrap">
 			<img src="assets/Logo.png" alt="Altellect" />
@@ -32,7 +32,7 @@
 
 <!-- HERO/BANNER SECTION -->
 <section class="about-hero careers-hero" style="position:relative; background:url('assets/Careers-banner.png') center/cover no-repeat; min-height:420px; height:420px; display:flex; align-items:flex-end;">
-  <div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
+  <div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;"></div>
   <div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
     <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">Diverse Talent. Unified By Purpose.</h1>
   </div>
@@ -233,46 +233,52 @@
 <section class="cta-wrap">
   <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
     <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
-    <button class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px;">LET’S CONNECT!</button>
+    <a href="contact.html" class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px; display: inline-block; text-align: center; text-decoration: none;">LET’S CONNECT!</a>
   </div>
 </section>
 
-<!-- FOOTER (copied from index.html) -->
+<!-- FOOTER -->
 <footer class="footer">
-	<div class="container footer-grid">
-		<div class="footer-brand">
-			<img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
-			<p>
-				801, 8th Floor, Sea Breeze Building,<br>
-				Century Bazaar, Prabhadevi, Mumbai,<br>
-				Maharashtra 400025
-			</p>
-		</div>
-		<div>
-			<h5>Menu</h5>
-			<a href="#">Projects</a>
-			<a href="#">Altellect Capital</a>
-			<a href="#">Careers</a>
-		</div>
-		<div>
-			<h5>Support</h5>
-			<a href="#">Contact Us</a>
-		</div>
-		<div>
-			<h5>Company</h5>
-			<a href="#">Home</a>
-			<a href="#">About Us</a>
-
-			<div class="socials">
-				<a href="#">f</a>
-				<a href="#">in</a>
-			</div>
-		</div>
-	</div>
-	<div class="footer-bottom container">
-		<span>Copyright © 2026 Altellect | All rights reserved.</span>
+  <div class="container footer-grid">
+    <!-- LOGO + ADDRESS -->
+    <div class="footer-brand">
+      <img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
+      <p>
+        801, 8th Floor, Sea Breeze Building,<br>
+        Century Bazaar, Prabhadevi, Mumbai,<br>
+        Maharashtra 400025
+      </p>
+    </div>
+    <!-- MENU -->
+    <div>
+      <h5>Menu</h5>
+      <a href="Projects.html">Projects</a>
+      <a href="capital.html">Altellect Capital</a>
+      <a href="carrers.html">Careers</a>
+    </div>
+    <!-- SUPPORT -->
+    <div>
+      <h5>Support</h5>
+      <a href="contact.html">Contact Us</a>
+    </div>
+    <!-- COMPANY -->
+    <div>
+      <h5>Company</h5>
+      <a href="index.html">Home</a>
+      <a href="about-us.html">About Us</a>
+      <a href="join.html">Join The Ecosystem</a>
+      <div class="socials">
+        <a href="https://facebook.com/altellect" target="_blank" title="Facebook"><img src="assets/Facebook-icon.png" alt="Facebook" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+        <a href="https://instagram.com/altellect" target="_blank" title="Instagram"><img src="assets/Instagram-icon.png" alt="Instagram" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+        <a href="https://linkedin.com/company/altellect" target="_blank" title="LinkedIn"><img src="assets/Linkedin-icon.png" alt="LinkedIn" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+        <a href="https://wa.me/" target="_blank" title="WhatsApp"><img src="assets/Whatsapp-icon.png" alt="WhatsApp" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom container">
+    <span>Copyright © 2026 Altellect | All rights reserved.</span>
     <a href="Privacy.html">Privacy Policy</a>
-	</div>
+  </div>
 </footer>
 
 </body>
