--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <!-- HERO BANNER -->
 <section class="hero">
-  <img src="assets/Banner-img@2x.png" class="hero-img" alt="" />
+  <img src="assets/Banner-img.png" class="hero-img" alt="" />
 
   <div class="hero-overlay"></div>
 
@@ -218,9 +218,9 @@
 
 <!-- CTA BAR (Redesigned as per XD) -->
 <section class="cta-wrap">
-  <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
-    <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
-    <button class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px;">LET’S CONNECT!</button>
+  <div class="cta-inner">
+    <h2 class="cta-title">Your Vision Deserves A Dedicated Partner.</h2>
+    <a href="contact.html" class="cta-btn">LET’S CONNECT!</a>
   </div>
 </section>
 
@@ -241,27 +241,28 @@
     <!-- MENU -->
     <div>
       <h5>Menu</h5>
-      <a href="#">Projects</a>
-      <a href="#">Altellect Capital</a>
-      <a href="#">Careers</a>
+      <a href="Projects.html">Projects</a>
+      <a href="capital.html">Altellect Capital</a>
+      <a href="carrers.html">Careers</a>
     </div>
 
     <!-- SUPPORT -->
     <div>
       <h5>Support</h5>
-      <a href="#">Contact Us</a>
+      <a href="contact.html">Contact Us</a>
     </div>
 
     <!-- COMPANY -->
     <div>
       <h5>Company</h5>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-
-
+      <a href="index.html">Home</a>
+      <a href="about-us.html">About Us</a>
+      <a href="join.html">Join The Ecosystem</a>
       <div class="socials">
-        <a href="#">f</a>
-        <a href="#">in</a>
+        <a href="https://facebook.com/altellect" target="_blank" title="Facebook"><img src="assets/Facebook-icon.png" alt="Facebook" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+        <a href="https://instagram.com/altellect" target="_blank" title="Instagram"><img src="assets/Instagram-icon.png" alt="Instagram" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+        <a href="https://linkedin.com/company/altellect" target="_blank" title="LinkedIn"><img src="assets/Linkedin-icon.png" alt="LinkedIn" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+        <a href="https://wa.me/" target="_blank" title="WhatsApp"><img src="assets/Whatsapp-icon.png" alt="WhatsApp" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
       </div>
     </div>
 
@@ -272,11 +273,6 @@
     <a href="Privacy.html">Privacy Policy</a>
   </div>
 </footer>
-
-
-
-
-
 
 </body>
 </html>
